--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 
 <body>
-  <div class='title-area' style="background-color:#F9B916;color:rgb(61, 56, 56);height:40px">
+  <div class='title-area' style="background-color:#e95a44;color:rgb(61, 56, 56);height:40px">
       
       
       <button id="sync" class="title-button btn btn-info btn-xs currentTop" data-toggle="tooltip" data-placement="bottom" data-original-title="클릭하면 현재 시각의 데이터로 갱신합니다." type="button"><i class="glyphicon glyphicon-refresh"></i> 새로고침</button>
@@ -75,11 +75,11 @@
 
     <ul id="filters" class="clearfix">
       <li><span class="filter active" data-filter="uptownholic miamasvin naingirl bubblenchic mayblue">All</span></li>
-      <li><span class="filter" data-filter="uptownholic"><img src="/images/uptownholic.jpg" height="18px"/></span></li>
-      <li><span class="filter" data-filter="miamasvin"><img src="/images/miamasvin.jpg" height="18px"/></span></li>
+      <li><span class="filter" data-filter="uptownholic"><img src="/images/uptownholic.jpg" height="15px"/></span></li>
+      <li><span class="filter" data-filter="miamasvin"><img src="/images/miamasvin.jpg" height="15px"/></span></li>
       <li><span class="filter" data-filter="naingirl"><img src="/images/naingirl.jpg" height="18px"/></span></li>
-      <li><span class="filter" data-filter="bubblenchic"><img src="/images/bubblenchic.png" height="18px"/></span></li>
-      <li><span class="filter" data-filter="mayblue"><img src="/images/mayblue.jpg" height="24px"/></span></li>
+      <li><span class="filter" data-filter="bubblenchic"><img src="/images/bubblenchic.png" height="15px"/></span></li>
+      <li><span class="filter" data-filter="mayblue"><img src="/images/mayblue.png" height="30px" style="margin-top: -10px;" /></span></li>
     </ul>
 
     <div id="status">&nbsp;</div>
